--- a/.github/workflows/publish_snapshots.yml
+++ b/.github/workflows/publish_snapshots.yml
@@ -2,7 +2,7 @@ name: Publish Jars Snapshots
 
 on:
   push:
-    branches: [ 146-Migrate-maven-repository ]
+    branches: [ master ]
     paths:
       - 'core/src/main/**'
       - 'main/src/main/**'
