--- a/.github/workflows/package_installers.yml
+++ b/.github/workflows/package_installers.yml
@@ -45,7 +45,7 @@ jobs:
       # Adding fail-fast: false so at least some artifacts gets uploaded if others fail
       fail-fast: false
       matrix:
-        os: [ macos-latest, windows-latest, ubuntu-latest ]
+        os: [ macos-latest, windows-2022, ubuntu-latest ]
     steps:
       - uses: actions/checkout@v4
         with:
