Set windows image to `windows-2022`

--- a/.github/workflows/test_pack_doc.yml
+++ b/.github/workflows/test_pack_doc.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       matrix:
         java_version: [ '17' ]
-        os: [ ubuntu-latest, windows-latest ]
+        os: [ ubuntu-latest, windows-2022 ]
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK ${{ matrix.java_version }}
@@ -51,7 +51,7 @@ jobs:
     strategy:
       matrix:
         java_version: [ '17' ]
-        os: [ ubuntu-latest, windows-latest ]
+        os: [ ubuntu-latest, windows-2022 ]
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK ${{ matrix.java_version }}
@@ -81,7 +81,7 @@ jobs:
     strategy:
       matrix:
         java_version: [ '17' ]
-        os: [ ubuntu-latest, windows-latest ]
+        os: [ ubuntu-latest, windows-2022 ]
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK ${{ matrix.java_version }}
