--- a/.github/workflows/package_installers.yml
+++ b/.github/workflows/package_installers.yml
@@ -178,7 +178,7 @@ jobs:
           filename=${{ matrix.os }}.zip
           pushd app/pkg/build/jpackage
           # The windows runner does not have zip, but has 7zip.
-          if [ "${{ matrix.os }}" == "windows-latest" ]; then
+          if [ "${{ matrix.os }}" == "windows-2022" ]; then
             7z a -tzip $filename *.msi
           else
             # Normally there should be either .deb or (.pkg and .dmg) Just capture all.
