--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -15,6 +15,8 @@ on:
       - 'web/**'
       - '.github/workflows/web_**.yml'
       - '.github/workflows/stg_web_**.yml'
+      - '.github/workflows/test_pack_doc.yml'
+      - '.github/workflows/package_installers.yml'
     types: [ opened, synchronize, reopened, ready_for_review ]
 concurrency:
   group: ${{ github.head_ref }}
