Drop in action-gh-release

--- a/.github/workflows/publish_assets.yml
+++ b/.github/workflows/publish_assets.yml
@@ -43,25 +43,23 @@ jobs:
 
       - name: Upload CLI JAR Asset
         if: github.event_name == 'release'
-        uses: actions/upload-release-asset@v1
+        uses: softprops/action-gh-release@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./cli/build/libs/gtfs-validator-${{ steps.get_version.outputs.version-without-v }}-cli.jar
-          asset_name: gtfs-validator-${{ steps.get_version.outputs.version-without-v }}-cli.jar
-          asset_content_type: application/java-archive
+          files: ./cli/build/libs/gtfs-validator-${{ steps.get_version.outputs.version-without-v }}-cli.jar
+          name: gtfs-validator-${{ steps.get_version.outputs.version-without-v }}-cli.jar
 
       - name: Upload GUI JAR Asset
         if: github.event_name == 'release'
-        uses: actions/upload-release-asset@v1
+        uses: softprops/action-gh-release@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./app/gui/build/libs/gui-${{ steps.get_version.outputs.version-without-v }}-all.jar
-          asset_name: gtfs-validator-${{ steps.get_version.outputs.version-without-v }}-gui.jar
-          asset_content_type: application/java-archive
+          files: ./app/gui/build/libs/gui-${{ steps.get_version.outputs.version-without-v }}-all.jar
+          name: gtfs-validator-${{ steps.get_version.outputs.version-without-v }}-gui.jar
 
       - name: Generate rules.json
         if: github.event_name == 'release'
