--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: gradle/wrapper-validation-action@v1
+      - uses: gradle/actions/wrapper-validation@v4
   test:
     needs: [ validate_gradle_wrapper ]
     runs-on: ubuntu-latest
@@ -33,9 +33,11 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
       - name: Run Java tests
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: testAggregateTestReport
+        uses: gradle/actions/setup-gradle@v4
+
+      - name: Generate aggregate test report
+        run: ./gradlew testAggregateTestReport
+
       - name: Persist aggregated test reports on failure
         if: ${{ failure() }}
         uses: actions/upload-artifact@v4
